# comfyui-kokoro-remote

./: .env.example  .gitignore  COMPATIBILITY.md  ComfyUIKokoro.py  KokoroSaveAudioPath.py  KokoroStringGate.py  README.md  __init__.py  pyproject.toml  test_kokoro_http.py
examples/: kokoro-full.json  kokoro-remote-sample.json  workflow-example.json
